@@ -150,6 +150,7 @@ public final class ModelBundleCache implements AutoCloseable {
   // Optional subword tokenizers (operator-supplied via model.subword.<id>.path, not bundled).
   // The loaded SentencePiece tokenizers are thread-safe and shared; empty when none is configured.
   private final SubwordRegistry subwordRegistry;
+  private final DependencyParserRegistry dependencyParserRegistry;
   // Optional hunspell affix dictionaries for the STEM step (operator-supplied via
   // model.hunspell.<id>.affix_path/.dictionary_path, not bundled). The loaded stemmers are
   // thread-safe and shared; empty when none is configured.
@@ -184,6 +185,7 @@ public final class ModelBundleCache implements AutoCloseable {
     }
     // Loaded first: these registries hold no native resources, so they can never leak.
     this.subwordRegistry = SubwordRegistry.create(configuration);
+    this.dependencyParserRegistry = DependencyParserRegistry.create(configuration);
     this.hunspellRegistry = HunspellRegistry.create(configuration);
     this.wordNetRegistry = WordNetRegistry.create(configuration);
     this.latticeRegistry = LatticeRegistry.create(configuration);
@@ -489,6 +491,15 @@ public final class ModelBundleCache implements AutoCloseable {
   }
 
   /**
+   * Returns the registry of configured dependency parsers.
+   *
+   * @return The dependency parser registry, possibly empty. Never {@code null}.
+   */
+  public DependencyParserRegistry getDependencyParserRegistry() {
+    return dependencyParserRegistry;
+  }
+
+  /**
    * Returns the registry of configured hunspell dictionaries.
    *
    * @return The registry of configured hunspell dictionaries, possibly empty. Never
@@ -685,13 +696,6 @@ public final class ModelBundleCache implements AutoCloseable {
   }
 
   /**
-   * Loads the language detector model. It needs custom resolution because the generic
-   * classpath provider is keyed by language, while this model is language-independent
-   * ({@code model.language=root} in its descriptor): explicit path first, then the
-   * {@code model.properties} descriptors of the model jars on the classpath, then the
-   * binary bundled inside the shaded server jar.
-   */
-  /**
    * Returns the default classic pipeline, serving every request no configured language
    * pipeline matches.
    *
@@ -834,7 +838,7 @@ public final class ModelBundleCache implements AutoCloseable {
   /** Returns the ISO 639-3 form of a language code, or {@code null} when unknown. */
   private static String iso3Code(String language) {
     try {
-      final String iso3 = new Locale(language).getISO3Language();
+      final String iso3 = Locale.of(language).getISO3Language();
       return iso3.isEmpty() ? null : StringUtil.toLowerCase(iso3);
     } catch (MissingResourceException e) {
       return null;
@@ -930,6 +934,13 @@ public final class ModelBundleCache implements AutoCloseable {
     }
   }
 
+  /**
+   * Loads the language detector model. It needs custom resolution because the generic
+   * classpath provider is keyed by language, while this model is language-independent
+   * ({@code model.language=root} in its descriptor): explicit path first, then the
+   * {@code model.properties} descriptors of the model jars on the classpath, then the
+   * binary bundled inside the shaded server jar.
+   */
   private LoadedArtifact<LanguageDetectorModel> loadLanguageDetectorModel(
       Map<String, String> configuration) {
     try {
@@ -1303,6 +1314,10 @@ public final class ModelBundleCache implements AutoCloseable {
       catalog.put(ProfileRegistry.PARSE_BUNDLE_ID,
           buildParseBundleCatalog(sentenceHash, tokenizerHash));
     }
+    if (dependencyParserRegistry.isAvailable()) {
+      catalog.put(ProfileRegistry.DEPENDENCY_BUNDLE_ID,
+          buildDependencyBundleCatalog(sentenceHash, tokenizerHash, posHash));
+    }
     if (chunkerRegistry.isAvailable()) {
       catalog.put(ProfileRegistry.CHUNK_BUNDLE_ID,
           buildChunkBundleCatalog(sentenceHash, tokenizerHash, posHash));
@@ -1373,6 +1388,41 @@ public final class ModelBundleCache implements AutoCloseable {
             .setBackendId(OPENNLP_ME_BACKEND_ID)
             .build())
         .build();
+  }
+
+  /** Builds the dependency parser model bundle. */
+  private ModelBundleInfo buildDependencyBundleCatalog(
+      String sentenceHash, String tokenizerHash, String posHash) {
+    final ModelBundleInfo.Builder bundle = ModelBundleInfo.newBuilder()
+        .setBundleId(ProfileRegistry.DEPENDENCY_BUNDLE_ID)
+        .addSupportedLanguages(DEFAULT_LANGUAGE)
+        .addSupportedSteps(PipelineStep.PIPELINE_STEP_SENTENCE_DETECT)
+        .addSupportedSteps(PipelineStep.PIPELINE_STEP_TOKENIZE)
+        .addSupportedSteps(PipelineStep.PIPELINE_STEP_POS_TAG)
+        .addSupportedSteps(PipelineStep.PIPELINE_STEP_DEPENDENCY_PARSE)
+        .addModels(classicModelDescriptor(
+            SENTENCE_MODEL_NAME,
+            ComponentType.COMPONENT_TYPE_SENTENCE_DETECTOR,
+            DEFAULT_LANGUAGE,
+            sentenceHash))
+        .addModels(classicModelDescriptor(
+            TOKENIZER_MODEL_NAME,
+            ComponentType.COMPONENT_TYPE_TOKENIZER,
+            DEFAULT_LANGUAGE,
+            tokenizerHash))
+        .addModels(classicModelDescriptor(
+            POS_MODEL_NAME,
+            ComponentType.COMPONENT_TYPE_POS_TAGGER,
+            DEFAULT_LANGUAGE,
+            posHash));
+    for (String parserId : dependencyParserRegistry.ids()) {
+      bundle.addModels(ModelDescriptor.newBuilder()
+          .setName(parserId)
+          .setComponentType(ComponentType.COMPONENT_TYPE_DEPENDENCY_PARSER)
+          .addSupportedSteps(PipelineStep.PIPELINE_STEP_DEPENDENCY_PARSE)
+          .setBackendId(OPENNLP_ME_BACKEND_ID));
+    }
+    return bundle.build();
   }
 
   /** Builds the name-finder model bundle. */
